@@ -3,6 +3,8 @@ v1.0.9
 - Support disabling menu items
 - Icons for all available shortcuts
 - Krypton changes
+- Icon overrides now respected for available shortcut nodes
+- Only build main menu into single mode include
 
 v1.0.8
 - Ability to set item properties from outside management dialog
